--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 <p>Mail&#58; akat@akat.dk</p>
             </div>
             <div class="SoMe">
+                <!-- Facebooks eget plugin -->
                 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Faarhuskatedralskole&tabs=timeline&width=274&height=70&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="274" height="70" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 <a href="https://www.instagram.com/aarhus_katedralskole"><img src="images/instagram.png" class="instagram" alt="instagram logo"></a> </div>
             </div>
