--- a/events.html
+++ b/events.html
@@ -1,11 +1,11 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="da">
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Aarhus Katedralskole er en STX uddannelse med fokus bla bla bla">
+    <meta name="description" content="Aarhus Katedralskole har mange forskellige events, aktiviteter, begivenheder og sociale arrangementer. Vi er en meget social skole. Vi mener både der skal være plads til sociale arrangmenter med plads til hygge og det faglige samtidig. Skolen er placeret centralt inde i Aarhus C, og det giver mange muligheder. Vi har et tæt samarbejde med mange steder og Aarhus som storby.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aarhus Katedralskole</title>
+    <title>Aktiviteter og Begivenheder</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -27,65 +27,70 @@
         </nav>
 
     </header>
+	<main>
     <div class="container">
-        <div class="grid-container-events">
+		<section class="grid-container-events">
         <div class="item1">
-            <h1 class="title">Aktiviteter</h1>
+            <h1 class="title-event">Aktiviteter</h1>
         </div>
-        <div class="item2">
-                <h3 class="title">Street Fodbold</h3>
+		<article class="item2">	
+                <h2 class="title">Street Fodbold</h2>
                 <img class="events" src="images/boldbane.png" alt="boldbanen ude mod havnen">
                 <p class="events-paragraf">
                     Har du lyst til at være med til vores ugentligt street fodbold turnering med fede præmier som biograf billetter til hele holdet, så tilmeld dig og din klassehold nedenfor.
                 </p>
                 <button class="læs-mere-button">Tilmeld</button>
-        </div>
-        <div class="item3">
-                <h3 class="title">Crossfit</h3>
+			</article>
+			
+        <article class="item3">
+                <h2 class="title">Crossfit</h2>
                 <img class="events" src="images/crossfit.png" alt="crossfit">
                 <p class="events-paragraf">
                     Aarhus Crossfit tilbyder en lang række hold. Hvad enten du søger høj intensitet, mobilitetstræning, udholdenhedstræning eller styrke, så skynd dig med at tilmelde dig.
                 </p>
                 <button class="læs-mere-button">Tilmeld</button>
             
-        </div>
-        <div class="item4">
-                <h3 class="title">Pokemon Go Raids</h3>
+        </article>
+        <article class="item4">
+                <h2 class="title">Pokemon Go Raids</h2>
                 <img class="events" src="images/pokemongo.png" alt="pokemon go logo">
                 <p class="events-paragraf">
                     Søger du nogle at fange Pokemons med, så tilmeld dig i gruppen. Vi tilbyder blandt andet ugenligt raids, hvor vi går rundt i grupper for at fange pokemons rundt i Aarhus strøget.
                 </p>
                 <button class="læs-mere-button">Tilmeld</button>
-        </div>
+        </article>
+		</section>
+		<section class="grid-container-events">
         <div class="item8">
-            <h1 class="title">Begivenheder</h1>
+            <h1 class="title-event">Begivenheder</h1>
         </div>
-        <div class="item5">
-                <h3 class="title">Dome of Visions</h3>
+        <article class="item5">
+                <h2 class="title">Dome of Visions</h2>
                 <img class="events" src="images/aarhus-dome.png" alt="billede af aarhus Dome">
                 <p class="events-paragraf">
                     Kom og oplev musik i Aarhus Dome of Visions ude i havnen hver fredag kl. 20 til midnat. Alle arrangementer er gratis.
                 </p>
                 <button class="læs-mere-button">Tilmeld</button>
-        </div>
-        <div class="item6">
-                <h3 class="title">Musikhuset</h3>
+        </article>
+        <article class="item6">
+                <h2 class="title">Musikhuset</h2>
                 <img class="events" src="images/musikhuset.png" alt="billede af musikhuset udefra">
                 <p class="events-paragraf">
                     Ser din kalender også tomt ud, så kom og oplev forskellige arrangementer i Musikhuset, hvor du kan opleve teater, dans, koncerter og meget mere.
                 </p>
                 <button class="læs-mere-button">Tilmeld</button>
-        </div>
-        <div class="item7">
-                <h3 class="title">DOKK-1</h3>
+        </article>
+        <article class="item7">
+                <h2 class="title">DOKK-1</h2>
                 <img class="events" src="images/dokk1.png" alt="billede af dokk1">
                 <p class="events-paragraf">
                     Meld dig ind i de mange forskellige foredrag på Dokk1 eller opret din egen. Dokk1 laver 2 store arrangementer om året, så hold øje med datoen.
                 </p>
                 <button class="læs-mere-button">Tilmeld</button>
-            </div>
-        </div>
+            </article>
+		</section>
     </div>
+	</main>
     <footer>
 		        <div class="footer">
             <div class="adresse">
